# AgenticMentor-Winter2026

./: .env.example  .gitignore  README.md  install_minimal.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_execution_planner.py  test_execution_planner_simple.py  test_supabase_adapter.py
data/mermaid_docs/: README.md  source.json  sources.json
data/vector_stores/: mermaid.index  mermaid_metadata.json  mermaid_texts.json
docs/: CHANGELOG.md  PDF_EXPORT_WINDOWS.md  agent_specifications.md  architecture.md  manual_merge.md  orchestrator-agent.md  orchestrator-cleanup-plan.md  orchestrator-deep-dive.md  orchestrator-flow.md  orchestrator-future-improvements.md  orchestrator-hardening-status.md  orchestrator-refresher.md  orchestrator-testing-guide.md  orchestrator_plan.md  phase4_final_validation.md  project-architect-agent.md  project-info.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  firebase.ts  formatApiError.ts  types.ts
frontend/store/: useAuthStore.ts  useProjectStore.ts
migrations/: 001_initial_schema.sql  SCHEMA_VERIFICATION.md  SUPABASE_INTEGRATION.md
outputs/mockups/: E-Commerce_Store.excalidraw  FlavorShare_MVP.excalidraw  FlavorShare_MVP.html  Nexus_AI_Assistant.excalidraw  Nexus_AI_Assistant.html
scripts/: dev_chat_orchestrator.py  ingest_mermaid_docs.py  query_mermaid_store.py  test_3_3_conversation_history.py  test_3_4_agent_selection.py  verify_supabase.py
src/: main.py
src/adapters/: __init__.py  llm_clients.py
src/agent/: requirements_agent.py
src/agents/: base_agent.py  execution_planner_agent.py  exporter_agent.py  friend.py  mockup_agent.py  project_architect.py  requirements_collector.py
src/auth/: firebase_auth.py
src/core/: config.py  prompt.py
src/models/: mockup_contract.py  schemas.py  wireframe_spec.py
src/orchestrator/: agent_registry.py  agent_store.py  execution_plan.py  (+5 more)
tests/: __init__.py  conftest.py  run_memory_tests.py  test_api_key.py  test_chat_app.py  test_memory_store.py  test_mockup_agent.py  test_no_llm.py  test_recipe_app.py
(+72 files in other folders)
