[project]
name = "agentic-mentor"
version = "0.1.0"
description = "AI Project Mentor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-anthropic>=0.2,<0.3",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-openai>=0.2,<0.3",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "tenacity>=9.0,<10.0",
    "faiss-cpu>=1.7,<2.0",
    "sentence-transformers>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "black>=24.10,<25.0",
    "ruff>=0.8,<0.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = ["E501"]
